--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,23 @@
 body{
     margin: 100px;
 }
+.pole{
+    width: 510px;
+    height: 510px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #999696;
+}
+.btn{
+    /* width: 200px; */
+    height: 30px;
+    margin: 0 auto;
+    display: block;
+    background: #f04d4d;
+    color: #e7f711;
+    font-size: 18px;
+}
 .field{
     width: 500px;
     height: 500px;
@@ -34,4 +51,5 @@ body{
     background: #04f504;
     /* color: #5cf105; */
     background-size: cover;
+    border-radius: 50%;
 }
